# Moonlight-Switch-Old

./: .gitmodules  Makefile  README.md  build.sh  meson.build
MoonlightSwitch.xcodeproj/: project.pbxproj
MoonlightSwitch.xcodeproj/project.xcworkspace/xcuserdata/xitrix.xcuserdatad/: UserInterfaceState.xcuserstate
MoonlightSwitch.xcodeproj/xcshareddata/xcschemes/: Moonlight-Switch.xcscheme
MoonlightSwitch.xcodeproj/xcuserdata/xitrix.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
MoonlightSwitch.xcodeproj/xcuserdata/xitrix.xcuserdatad/xcschemes/: xcschememanagement.plist
build.x/resources/i18n/fr/: main.json
build.x/resources/moonlight/: settings.json
resources/i18n/en-US/: host_tab.json  main.json
resources/moonlight/key/: client.pem  key.pem
src/: main.cpp  makefile.mk  meson.build
src/ui/: AppListView.cpp  AppListView.hpp  HostTab.cpp  HostTab.hpp  UIError.cpp  UIError.hpp  UIIngameMenu.cpp  UIIngameMenu.hpp  UIMainScreen.cpp  UIMainScreen.hpp  UIStreamView.cpp  UIStreamView.hpp
